--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ blog-env
 django_blog/django_blog/__pycache__
 django_blog/blog/__pycache__
 django_blog/db.sqlite3
+django_blog/blog/migrations/__pycache__
